fix collapsed header alignement

--- a/assets/styles/scss/includes/header.scss
+++ b/assets/styles/scss/includes/header.scss
@@ -48,7 +48,6 @@
 
 	display: flex;
 	gap: 24px;
-	justify-self: center;
 }
 .header-navigation > li{
 	list-style: none;
